--- a/views/index_kz.ejs
+++ b/views/index_kz.ejs
@@ -194,12 +194,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">4999</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">20000</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">7000</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">23000</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__btn-wrapper">
@@ -279,12 +279,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">2700.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">12500</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">3500</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">16000</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -380,12 +380,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">3000.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">15000.00</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">3960</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">17000</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -481,12 +481,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">2450.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">12000.00</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">3100</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">14500</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -581,12 +581,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">2650.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">12000.00</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">3400</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">13500</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -680,12 +680,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">3000.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">15000.00</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">4400</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">17500</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -780,12 +780,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">2175.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">9000.00</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">2800</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">11000</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -878,12 +878,12 @@
                      </div>
                      <div class="t744__price-wrapper">
                         <div class="t744__price t744__price-item t-name t-name_md" style="margin-right:5px">
-                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">2350.00</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value js-product-price" field="price" data-redactor-toolbar="no">12500.00</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                         <div class="t744__price_old t744__price-item t-name t-name_md">
-                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">2750</div>
-                           <div class="t744__price-currency">zł.</div>
+                           <div class="t744__price-value" data-redactor-toolbar="no" field="price_old">14000</div>
+                           <div class="t744__price-currency">₸</div>
                         </div>
                      </div>
                      <div class="t744__descr t-descr t-descr_xxs" field="descr">Вас ждет:
@@ -983,7 +983,7 @@
          tcart__init("71849273")
       });
       </script>
-      <div class="t706" data-opencart-onorder="yes" data-project-currency="zł." data-project-currency-side="r" data-project-currency-sep="," data-payment-system="yamoney">
+      <div class="t706" data-opencart-onorder="yes" data-project-currency="₸" data-project-currency-side="r" data-project-currency-sep="," data-payment-system="yamoney">
          <div class="t706__carticon">
             <div class="t706__carticon-text t-name t-name_xs">Click to order</div>
             <div class="t706__carticon-wrapper">
