--- a/views/index_kz.ejs
+++ b/views/index_kz.ejs
@@ -1046,7 +1046,7 @@
                            <div class="t-input-group t-input-group_ph" data-input-lid="1496239478607">
                               <div class="t-input-title t-descr t-descr_md" data-redactor-toolbar="no" field="li_title__1496239478607">Ваш телефон</div>
                               <div class="t-input-block">
-                                 <input type="tel" name="phone" id="phoness" class="t-input js-tilda-rule js-tilda-mask" placeholder="7" data-tilda-req="1" data-tilda-rule="phone" pattern="[0-9]*+" data-tilda-mask="380999999999" style="color:#000;border:1px solid #000;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px">
+                                 <input type="tel" name="phone" id="phoness" class="t-input js-tilda-rule js-tilda-mask" placeholder="7" data-tilda-req="1" data-tilda-rule="phone" pattern="[0-9]*+" style="color:#000;border:1px solid #000;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px">
                                  <div class="t-input-error"></div>
                               </div>
                            </div>
@@ -1107,7 +1107,7 @@
                            <input type="hidden" name="amount" id="summas">
                            <input type="hidden" name="description" id="description">
                            <div class="t-form__submit">
-                              <button type="submit" id="neworder" class="t-submit" style="color:#fff;background-color:#000;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px;opacity: 0.1;" disabled>Оформити замовлення</button>
+                              <button type="submit" id="neworder" class="t-submit" style="color:#fff;background-color:#000;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px;opacity: 0.1;" disabled>Оформить заказ</button>
                            </div>
                         </div>
                      </div>
