--- a/views/index_code_ua.ejs
+++ b/views/index_code_ua.ejs
@@ -839,7 +839,7 @@
 						<tbody style="margin: auto;">
 							<tr>
 								<th style="float:right" scope="row">Магазин</th>
-								<td style="padding-left:10px;color:#1a3b5d;font-weight: lighter;">kalyan-funnyhub.fun</td>
+								<td style="padding-left:10px;color:#1a3b5d;font-weight: lighter;">funnyhub-kalyan.fun</td>
 							</tr>
 							<tr>
 								<th style="float:right" scope="row">Сума</th>
