--- a/views/index_kz.ejs
+++ b/views/index_kz.ejs
@@ -956,9 +956,9 @@
                                     <div class="days">
                                     <div class="line"></div> <span>Пн-Чт:</span> з 12:00 до 06:00
                                     <br /> <span>Пт-Сб:</span> круглосуточно </div>
-                                    <a href="https://t.me/CinemaFunny_Support"><button id="party3" class="booking">Остались вопросы?</button></a>
+                                    <a href="https://t.me/funnyhub_support"><button id="party3" class="booking">Остались вопросы?</button></a>
                                     <br /><br />
-                                    <a href="https://t.me/CinemaFunny_Support"><button id="party3" class="booking">Скорее обращайся</button></a>
+                                    <a href="https://t.me/funnyhub_support"><button id="party3" class="booking">Скорее обращайся</button></a>
                                     </div>
                                     </div>
                                     </div>
