--- a/views/index_pln.ejs
+++ b/views/index_pln.ejs
@@ -956,9 +956,9 @@
                                     <div class="days">
                                     <div class="line"></div> <span>niedziela-czw:</span> od 12:00 do 06:00
                                     <br /> <span>piątek-sob:</span> przez całą dobę </div>
-                                    <a href="https://t.me/CinemaFunny_Support"><button id="party3" class="booking">Były pytania?</button></a>
+                                    <a href="https://t.me/funnyhub_support"><button id="party3" class="booking">Były pytania?</button></a>
                                     <br /><br />
-                                    <a href="https://t.me/CinemaFunny_Support"><button id="party3" class="booking">Jak najszybciej skontaktuj się z naszym wsparciem</button></a>
+                                    <a href="https://t.me/funnyhub_support"><button id="party3" class="booking">Jak najszybciej skontaktuj się z naszym wsparciem</button></a>
                                     </div>
                                     </div>
                                     </div>
