--- a/views/index.ejs
+++ b/views/index.ejs
@@ -956,9 +956,9 @@
                                     <div class="days">
                                     <div class="line"></div> <span>Пн-Чт:</span> з 12:00 до 06:00
                                     <br /> <span>Пт-Сб:</span> круглосуточно </div>
-                                    <a href="https://t.me/funnyhub_support"><button id="party3" class="booking">Остались вопросы?</button></a>
+                                    <a href="https://t.me/CinemaFunny_Support"><button id="party3" class="booking">Остались вопросы?</button></a>
                                     <br /><br />
-                                    <a href="https://t.me/funnyhub_support"><button id="party3" class="booking">Скорее обращайся</button></a>
+                                    <a href="https://t.me/CinemaFunny_Support"><button id="party3" class="booking">Скорее обращайся</button></a>
                                     </div>
                                     </div>
                                     </div>
@@ -1046,7 +1046,7 @@
                            <div class="t-input-group t-input-group_ph" data-input-lid="1496239478607">
                               <div class="t-input-title t-descr t-descr_md" data-redactor-toolbar="no" field="li_title__1496239478607">Ваш телефон</div>
                               <div class="t-input-block">
-                                 <input type="tel" name="phone" id="phoness" class="t-input js-tilda-rule js-tilda-mask" placeholder="7" data-tilda-req="1" data-tilda-rule="phone" pattern="[0-9]*+" style="color:#000;border:1px solid #000;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px">
+                                 <input type="tel" name="phone" id="phoness" class="t-input js-tilda-rule js-tilda-mask" placeholder="380" data-tilda-req="1" data-tilda-rule="phone" pattern="[0-9]*+" style="color:#000;border:1px solid #000;border-radius:30px;-moz-border-radius:30px;-webkit-border-radius:30px">
                                  <div class="t-input-error"></div>
                               </div>
                            </div>
