--- a/views/index_kz.ejs
+++ b/views/index_kz.ejs
@@ -139,7 +139,7 @@
                <div class="t-col t-col_12">
                   <div class="t158__text t-text" field="text">
                      <div style="font-size:18px;line-height:30px" data-customstyle="yes"><strong><span data-redactor-tag="span" style="font-size:18px">Сеть кальян-баров FunnyHub</span><br></strong>
-                        <br><span style="font-size:18px">Мы развиваем кальянную культуру в Украине.
+                        <br><span style="font-size:18px">Мы развиваем кальянную культуру в Казахстане.
                            Главный в нашем бизнесе Гость, именно для него мы делаем наше дело, именно Гость определяет, как мы отработали очередной день и очередную смену.
                            Мы с удовольствием поддерживаем широкий ассортимент кальянов, табака, элитного китайского чая и изысканных блюд. Мы следим за всеми трендами ресторанного бизнеса, чтобы Гость у нас не просто проводил время, а делал это с удовольствием, чувствуя все тонкости качественного сервиса и дружеской атмосферы, которые мы разделяем с каждым.
                            Присоединяйся к нашей семье!</span>
