--- a/views/index_pln.ejs
+++ b/views/index_pln.ejs
@@ -139,7 +139,7 @@
                <div class="t-col t-col_12">
                   <div class="t158__text t-text" field="text">
                      <div style="font-size:18px;line-height:30px" data-customstyle="yes"><strong><span data-redactor-tag="span" style="font-size:18px">Sieć barów z fajką wodną FunnyHub</span><br></strong>
-                        <br><span style="font-size:18px">Rozwijamy kulturę fajki wodnej na Ukrainie.
+                        <br><span style="font-size:18px">Rozwój kultury fajki wodnej w Polsce.
                            Główną osobą w naszej działalności jest Gość, to przez niego i dla niego wykonujemy naszą pracę, to Gość ostatecznie decyduje o tym, jak przepracowaliśmy kolejny dzień i kolejną zmianę.
                            Z przyjemnością wspieramy szeroką gamę fajek wodnych, tytoniu, menu barowego i koktajlowego, elitarną chińską herbatę i wykwintne dania. Śledzimy wszystkie trendy w branży restauracyjnej, aby Gość nie tylko spędzał u nas czas, ale robił to z satysfakcją, doświadczając wszystkich subtelności jakości obsługi i przyjaznej atmosfery, którą dzielimy ze wszystkimi.
                            Dołącz do naszej rodziny!</span>
